--- a/argocd/applications/cloudwatch-logging-configuration.yaml
+++ b/argocd/applications/cloudwatch-logging-configuration.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/open-sudo/rosa-idp.git
+    repoURL: https://github.com/SystemSix3/rosa-idp.git
     targetRevision: HEAD
     path: cloudwatch-logging/configuration
     directory:
