--- a/argocd/applications/external-secrets-operator.yaml
+++ b/argocd/applications/external-secrets-operator.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/open-sudo/rosa-idp.git
+    repoURL: https://github.com/SystemSix3/rosa-idp.git
     path: external-secrets
     targetRevision: HEAD
   destination:
