--- a/argocd/root-application.yaml
+++ b/argocd/root-application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/open-sudo/rosa-idp.git
+    repoURL: https://github.com/SystemSix3/rosa-idp.git
     path: argocd/applications
     directory:
       include: "*.yaml"
